# car_head_unit

./: index.html  package-lock.json  package.json
.github/workflows/: main.yml
scss/: custom.css  custom.scss
src/: App.tsx  Constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: emitter.rs  lib.rs  main.rs  notifications.rs  updater.rs
src-tauri/src/bluetooth/: bluetooth.rs  mod.rs
src-tauri/src/music/: mod.rs  music.rs  player.rs
src/components/: ImageButton.tsx
src/components/bars/: Bottombar.tsx  Topbar.tsx
src/components/bluetooth/: Device.tsx
src/components/boards/: Board.tsx  BoardDetails.tsx
src/components/buttons/: ToggleButton.tsx
src/components/generic/: Clock.tsx  InternetReq.tsx  NavTabs.tsx
src/components/modals/: PowerMenu.tsx
src/components/music/: SongControls.tsx  SongInfo.tsx  SongProgress.tsx  Source.tsx
src/components/notifications/: Notification.tsx
src/components/radio/: SavedStations.tsx  StationControls.tsx
src/components/settings/: Updates.tsx
src/screens/: Bluetooth.tsx  BoardManager.tsx  Home.tsx  InternetRadio.tsx  Music.tsx  Navigation.tsx  Radio.tsx  Settings.tsx
src/utils/: svgUtils.tsx  utils.ts
